traefik22/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  namespace: kube-system
  name: traefik-daemon-set
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.dominio.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-daemon-set
                port:
                  number: 80
